--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
-    <title>vue-test-wp</title>
+    <title>client</title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+    <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-
 <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+<div id="app"></div>
+<!-- built files will be auto injected -->
 </body>
-
 </html>
